# campo-aberto

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CODEBASE.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: deploy-site.yml  quality.yml
configs/: README.md  serie_a.yaml  serie_a_2022.yaml  serie_a_2023.yaml  serie_a_2024.yaml  serie_a_2025.yaml  serie_a_2026.yaml  serie_b.yaml  serie_b_2022.yaml  serie_b_2023.yaml  serie_b_2024.yaml  serie_b_2025.yaml  serie_b_2026.yaml
data/assets/: club_infos.csv
scripts/: run_related_tests.py
site/: README.md  evolution.html  index.html  matches.html  probabilities.html  robots.txt  sitemap.xml
site/assets/css/: model.css  (+3 more)
site/data/: manifest.json  matches_manifest.json  model_stats.json  params.json  played_manifest.json
site/matches/: played.html  simulate.html  upcoming.html
site/model/: docs.html  stats.html
src/: constants.py  pipeline.py
src/models/: adapter.py  backtest.py  data.py  fit.py  hyperparameter_sweep.py  poisson_home.stan  registry.py
src/simulation/: config.py  fixtures.py  results.py  run.py  run_rounds.py  simulate.py  standings.py
src/site/: export_matches_data.py  export_site_data.py  model_stats.py
tests/models/: _dummy_adapter.py  test_backtest.py  test_bivariate_poisson_home_adapter.py  test_data.py  test_fit.py  test_hierarchical_home_adapter.py  test_hyperparameter_sweep.py  test_negbin_home_adapter.py  test_negbin_home_shared_phi_adapter.py  test_poisson_home_adapter.py  test_poisson_home_no_rho_adapter.py  test_poisson_strength_adapter.py
(+117 files in other folders)
