[project]
name = "campo-aberto"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "duckdb>=1.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "rapidfuzz>=3.0",
    "pydantic>=2.0",
    "requests>=2.31",
    "pypdf2>=3.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "supabase>=2.0",
    "cmdstanpy>=1.2",
    "arviz>=0.18",
    "numpy>=1.26",
    "scipy>=1.11",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
