[project]
name = "campo-aberto"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0",
    "rapidfuzz>=3.0",
    "requests>=2.31",
    "pypdf2>=3.0",
    "pyyaml>=6.0",
    "cmdstanpy>=1.2",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
